# thesis_project

./: README.md
controller/: CMakeLists.txt  package.xml  pure_controller.xml
controller/include/nav2_pure_controller/: pure_controller.hpp
controller/src/: all2.txt  pure_controller.cpp
custom_msg_srv/: CMakeLists.txt  package.xml
custom_msg_srv/msg/: Rotate.msg
custom_msg_srv/srv/: GetBatteryState.srv
is_exploration/: package.xml  setup.cfg  setup.py
is_exploration/scripts/: custom_publisher.py  gotopoint.py
isabel_battery/: package.xml  setup.cfg  setup.py
isabel_battery/scripts/: g.py  getbattery.py  pub_getbattery.py
isabel_exploration/: CMakeLists.txt  package.xml
isabel_exploration/scripts/: gotopoint.py
isabel_interface/: CMakeLists.txt  package.xml
isabel_interface/launch/: all.launch.py  all.launch_backup.py  prueba.launch.py  rtabmap_launcher.launch.py
isabel_interface/scripts/: all.txt  vel2.py  vel2_backup.py
isabel_interface/src/: 2_pointcloud.cpp  pointcloud.cpp
navigation2/nav2_bringup/launch/: tb3_simulation_launch_controller.py  tb3_simulation_launch_spot.py
navigation2/nav2_bringup/params/: .nav2_params_slam.yaml.swp  backup_30_05_nav2_params_slam.yaml  backup_nav2_params_slam.yaml  nav2_params_controller.yaml  nav2_params_me.yaml  nav2_params_slam.yaml
plansys/plansys2_simple_example_py/: CMakeLists.txt  package.xml
plansys/plansys2_simple_example_py/launch/: all_launcher.py  plansys2_launch.py
plansys/plansys2_simple_example_py/pddl/: .domain.pddl.swp  d.pddl  domain.pddl  domain_bueno.pddl  domain_working.pddl  my_example.pddl
plansys/plansys2_simple_example_py/plansys2_simple_example_py/: StatusReport.txt  a.py  check_action_node.py  check_action_node_fake.py  check_action_node_service.py  dialog_action_node.py  dialog_action_node_fake.py  evaluate_action_node.py  evaluate_action_node_fake.py  gotopoint.py  move_action_node.py  move_action_node_1.py  move_action_node_fake.py  old_gotopoint.py  prueba.py  pub_check_action_node.py  report_action_node.py  report_action_node_fake.py  search_action_node.py  search_action_node_fake.py  search_action_node_track.py  single_ev.py
plansys/plansys2_simple_example_py/src/: controller.cpp  controller_backup.cpp  final_controller.cpp  move_node.cpp
plansys/plansys2_support_py/plansys2_support_py/: ActionExecutorClient.py
zed/: CMakeLists.txt  package.xml
zed/msg/: Detection.msg  Evaluation.msg  Structure.msg  StructureArray.msg
zed/scripts/: client.py  get_info.py  server_both.py  server_both_backup.py  server_guess.py  server_tcp.py  server_tracking.py
